Fix precoure ln bugs

--- a/105-math-integration.Rmd
+++ b/105-math-integration.Rmd
@@ -78,6 +78,8 @@ We write $$\int_{0}^2f(x)dx = \int_{0}^2 xdx =  \Bigr[ \frac{1}{2}x^2\Bigr]_0^2 
 
 -------
 
+## Exercises (integration)
+
 ```{exercise, "m-int"}
 
 Integrate:
